@@ -1,7 +1,7 @@
 package globalquake.core.earthquake;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import globalquake.core.GlobalQuake;
 import globalquake.core.archive.ArchivedQuake;
@@ -15,36 +15,36 @@ public class EarthquakeDataExport {
 
     public static List<ArchivedQuake> getArchivedAndLiveEvents(){
         //make a copy of the earthquakes, both archived and current.
-        List<ArchivedQuake> archivedQuakes = GlobalQuake.instance.getArchive().getArchivedQuakes().stream().collect(Collectors.toList());
-        List<Earthquake> currentEarthquakes = GlobalQuake.instance.getEarthquakeAnalysis().getEarthquakes().stream().collect(Collectors.toList());
+        List<ArchivedQuake> archivedQuakes = new ArrayList<>(GlobalQuake.instance.getArchive().getArchivedQuakes());
+        List<Earthquake> currentEarthquakes = GlobalQuake.instance.getEarthquakeAnalysis().getEarthquakes().stream().toList();
 
         //Combine the archived and current earthquakes
-        List<ArchivedQuake> earthquakes = archivedQuakes;
-        List<UUID> uuids = earthquakes.stream().map(ArchivedQuake::getUuid).collect(Collectors.toList());
+        List<UUID> uuids = archivedQuakes.stream().map(ArchivedQuake::getUuid).toList();
         for (Earthquake quake : currentEarthquakes) {
             if (!uuids.contains(quake.getUuid())) {
                 ArchivedQuake archivedQuake = new ArchivedQuake(quake);
                 archivedQuake.setRegion(quake.getRegion());
-                earthquakes.add(archivedQuake);
+                archivedQuakes.add(archivedQuake);
             }
         }
 
-        return earthquakes;
+        return archivedQuakes;
     }
 
     public static String getQuakeMl(List<ArchivedQuake> earthquakes) {
-        String quakeml = "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
-                "<q:quakeml xmlns=\"http://quakeml.org/xmlns/bed/1.2\" xmlns:q=\"http://quakeml.org/xmlns/quakeml/1.2\">\n" +
-                "<eventParameters>\n";
+        StringBuilder quakeml = new StringBuilder("""
+                <?xml version="1.0" encoding="UTF-8"?>
+                <q:quakeml xmlns="http://quakeml.org/xmlns/bed/1.2" xmlns:q="http://quakeml.org/xmlns/quakeml/1.2">
+                <eventParameters>
+                """);
 
         for (ArchivedQuake quake : earthquakes) {
-            quakeml += quake.getQuakeML();
+            quakeml.append(quake.getQuakeML());
         }
 
-        quakeml += "</eventParameters>\n" +
-                "</q:quakeml>";
+        quakeml.append("</eventParameters>\n" + "</q:quakeml>");
 
-        return quakeml;
+        return quakeml.toString();
     }
 
     public static JSONObject getGeoJSON(List<ArchivedQuake> earthquakes) {
@@ -66,13 +66,13 @@ public class EarthquakeDataExport {
 uw61977871|2023-12-24T15:14:04.220|47.81966666666667|-122.96|52.39|uw|uw|uw|uw61977871|ml|4.04|uw|6 km W of Quilcene, Washington */
 
     public static String getText(List<ArchivedQuake> earthquakes) {
-        String text = "#EventID|Time|Latitude|Longitude|Depth/km|Author|Catalog|Contributor|ContributorID|MagType|Magnitude|MagAuthor|EventLocationName\n";
+        StringBuilder text = new StringBuilder("#EventID|Time|Latitude|Longitude|Depth/km|Author|Catalog|Contributor|ContributorID|MagType|Magnitude|MagAuthor|EventLocationName\n");
 
         for (ArchivedQuake quake : earthquakes) {
-            text += quake.getFdsnText() + "\n";
+            text.append(quake.getFdsnText()).append("\n");
         }
 
-        return text;
+        return text.toString();
     }
 
 }
